stack.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Sample CloudFormation Template for CSYE 6225 - Fall 2017",
    "Resources": {
        "EC2Instance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
				"KeyName" : "ec2try",
                "ImageId": "ami-6e1a0117",
                "InstanceType": "t2.micro",
                "SecurityGroupIds": [
                    {
                        "Fn::GetAtt": [
                            "WebServerSecurityGroup",
                            "GroupId"
                        ]
                    }
                ],
				"DisableApiTermination": "TRUE",
				"BlockDeviceMappings" : [
                {
                "DeviceName" : "/dev/sda1",
                "Ebs" : { 
                          "DeleteOnTermination": true,
                          "SnapshotId": "snap-02cc1e40d2e121683",
                          "VolumeSize": 16,
                          "VolumeType": "gp2"
                        } 
                }
                ]
            }
        },
		"ResourceRecordSet" : {
		"Type" : "AWS::Route53::RecordSet",
		"Properties" : {
        "HostedZoneId" : "Z2DH59WEOS3S7Z",
        "Comment" : "DNS name for my instance.",
        "Name" : "ec2.csye6225-fall2017-sharmaj.me",
        "Type" : "A",
        "TTL" : "60",
        "ResourceRecords" : [ { "Fn::GetAtt" : [ "EC2Instance", "PublicIp" ] } ]
		}
		},
        "WebServerSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
				"GroupName" : "csye6225-fall2017-STACK_NAME-webapp",
                "GroupDescription": "Enable HTTP access via port 80, SSH access via port 22, HTTPS access via port 443",
                "VpcId": "vpc-c2e79ca5",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    },
					{
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        }
    }
}
